# sfm

./: .gitignore  .travis.yml  COPYING  ChangeLog  Dockerfile  INSTALL  LICENSE  Makefile  Makefile.am  README  README.md  TODO  action.c  autogen.sh  configure.ac  libsmb.c  main-list.c  main.c  main.h  strkey.c  util.c  views.c
.github/workflows/: build.yaml  release.yaml
doc/: Makefile  functions.txt  sfm.1
etc/: sfm.cfg
po/: Makefile
src/: Makefile  Makefile.am  console.c  console.h  gui.c  gui.h  libsmb.c  main.c  main.h  massert.h  memory.c  memory.h  operations.c  operations.h  options.c  options.h  ui.c  util.c  util.h  views.c  views.h
tests/: Makefile  test01.c
